# optimalportfolios-defi

./: .gitignore  .gitmodules  README.py  pyproject.toml
scripts/: 01-ethereum-mainnet.py  02-ethereum-with-cash.py  03-ethereum-with-cash-weekly.py  04-ethereum-with-cash-sharpe.py  05-ethereum-tweaks.py  06-ethereum-fixed-universe.py  07-ethereum-tweak-span.py  08-ethereum-fix-returns.py  09-ethereum-roll-window-90.py  10-ethereum-roll-window-7.py  11-ethereum-roll-window-20.py  12-ethereum-short.py  13-ethereum-long.py  example.py
