[project]
name = "optimaportfolios-defi"
version = "0.1.0"
description = "Combine OptimaPortfolio with DeFi tokens"
authors = [
    {name = "Mikko Ohtamaa"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "optimalportfolios (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

