[project]
name = "optimaportfolios-defi"
version = "0.1.0"
description = "Combine OptimaPortfolio with DeFi tokens"
authors = [
    {name = "Mikko Ohtamaa"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"


[tool.poetry.dependencies]
optimalportfolios = {develop = true, path = "./deps/OptimalPortfolios"}
ecos = "^2.0.14"
